<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:weightSum="6"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_grey">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners_grey"
                android:text="@string/zero"
                android:textSize="18pt"
                android:textAlignment="center"
                android:gravity="center"
                android:id="@+id/calc_screen"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/zero"
                android:textSize="16pt" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/decimal"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_red"
                android:onClick="AC"
                android:text="@string/allclear"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_orange"
                android:onClick="operation"
                android:text="@string/plus"
                android:textSize="16pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/one"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/two"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/three"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_orange"
                android:onClick="operation"
                android:text="@string/minus"
                android:textSize="16pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/four"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/five"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/six"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_orange"
                android:onClick="operation"
                android:text="@string/multiply"
                android:textSize="16pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/seven"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/eight"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_blue"
                android:onClick="updateDisplay"
                android:text="@string/nine"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_orange"
                android:onClick="operation"
                android:text="@string/divide"
                android:textSize="16pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_green"
                android:onClick="onEquals"
                android:text="@string/equals"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1.5"
                android:background="@drawable/rounded_corners_orange"
                android:onClick="operation"
                android:text="@string/squareroot"
                android:textSize="16pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1.5"
                android:background="@drawable/rounded_corners_orange"
                android:onClick="operation"
                android:text="@string/exponent"
                android:textSize="16pt" />

        </LinearLayout>
</LinearLayout>